--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -5,27 +5,12 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Category</a></li>
-                    <li>Page active</li>
+                    <li>Fruit</li>
                 </ul>
             </div>
-            <h1>Armor Air X Fear</h1>
+            <h1>Orange</h1>
         </div>
         <!-- /page_header -->
-        <div class="row justify-content-center">
-            <div class="col-lg-8">
-                <div class="owl-carousel owl-theme prod_pics magnific-gallery">
-                    <div class="item">
-                        <a href="img/products/shoes/product_detail_1.jpg" title="Photo title" data-effect="mfp-zoom-in"><img src="img/products/shoes/product_detail_1.jpg" alt=""></a>
-                    </div>
-                    <!-- /item -->
-                    <div class="item">
-                        <a href="img/products/shoes/product_detail_2.jpg" title="Photo title" data-effect="mfp-zoom-in"><img src="img/products/product_placeholder_detail_2.jpg" data-src="img/products/shoes/product_detail_2.jpg" alt="" class="owl-lazy"></a>
-                    </div>
-                    <!-- /item -->
-                </div>
-                <!-- /carousel -->
-            </div>
-        </div>
         <!-- /row -->
     </div>
     <!-- /container -->
@@ -33,14 +18,16 @@
     <div class="bg_white">
         <div class="container margin_60_35">
             <div class="row justify-content-between">
+                <div class="col-lg-5">
+                    <div>
+                        <img class="item" src="assets/img/products/orange.jpg" alt="">
+                    </div>
+                </div>
                 <div class="col-lg-6">
                     <div class="prod_info version_2">
                         <span class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i><em>4 reviews</em></span>
                         <p><small>SKU: MTKRY-001</small><br>Lorem ipsum dolor sit amet, his no adipisci pericula conclusionemque. Qui labore salutandi ex, vivendum argumentum mediocritatem vis eu, viris tritani per id. At iudicabit maluisset vis, dicant diceret pri cu. Cum at rebum vulputate forensibus, eruditi principes ad vel, pro denique recusabo at. Ubique nominavi delicata sit cu, quo no reque insolens suscipiantur.</p>
-                        <p>Et phaedrum temporibus per. Antiopam posidonium et est. Eu ius quas modus suavitate, ex sea feugiat laoreet voluptatum. Quo at veritus ancillae complectitur, duo no assum omnes.</p>
                     </div>
-                </div>
-                <div class="col-lg-5">
                     <div class="prod_options version_2">
                         <div class="row">
                             <label class="col-xl-7 col-lg-5  col-md-6 col-6 pt-0"><strong>Color</strong></label>
