--- a/src/app/topheader/topheader.component.html
+++ b/src/app/topheader/topheader.component.html
@@ -186,7 +186,7 @@
                               </div>
                               <div class="categories_menu_toggle">
                                   <ul>
-                                      <li class="menu_item_children"><a href="#">Vegetables<i class="fa fa-angle-right"></i><span class="expand"></span></a>
+                                      <!-- <li class="menu_item_children"><a href="#">Vegetables<i class="fa fa-angle-right"></i><span class="expand"></span></a>
                                           <ul class="categories_mega_menu">
                                               <li class="menu_item_children"><a href="#">Dresses<span class="expand"></span></a>
                                                   <ul class="categorie_sub_menu">
@@ -289,20 +289,20 @@
                                                   </ul>
                                               </li>
                                           </ul>
-                                      </li>
-                                      <li><a href="#"> Fresh Meat</a></li>
-                                      <li><a href="#"> Butter &amp; Eggs</a></li>
-                                      <li><a href="#">Milk</a></li>
-                                      <li><a href="#">Oil &amp; Vinegars</a></li>
-                                      <li><a href="#"> Bread</a></li>
-                                      <li><a href="#"> Jam &amp; Honey</a></li>
-                                      <li><a href="#"> Frozen Food</a></li>
-                                      <li id="cat_toggle" class="has-sub"><a href="#">  More Items</a>
+                                      </li> -->
+                                      <li><a routerLink="/products"> Fresh Meat</a></li>
+                                      <li><a routerLink="/products"> Butter &amp; Eggs</a></li>
+                                      <li><a routerLink="/products">Milk</a></li>
+                                      <li><a routerLink="/products">Oil &amp; Vinegars</a></li>
+                                      <li><a routerLink="/products"> Bread</a></li>
+                                      <li><a routerLink="/products"> Jam &amp; Honey</a></li>
+                                      <li><a routerLink="/products"> Frozen Food</a></li>
+                                      <!-- <li id="cat_toggle" class="has-sub"><a href="#">  More Items</a>
                                           <ul class="categorie_sub">
                                               <li><a href="#">Hide Categories</a></li>
                                           </ul>
 
-                                      </li>
+                                      </li> -->
                                   </ul>
                               </div>
                           </div>
