--- a/src/app/topheader/topheader.component.html
+++ b/src/app/topheader/topheader.component.html
@@ -105,8 +105,9 @@
                                       </ul>
                                   </div>
                                   <div class="header_account_list header_wishlist">
-                                      <a routerLink="/wishlist"><span class="lnr lnr-heart"></span> <span class="item_count">3</span> </a>
+                                      <a routerLink="/wishlist"><span class="lnr lnr-heart"></span></a>
                                   </div>
+                                  
                                   <div class="header_account_list  mini_cart_wrapper">
                                       <a routerLink="/cart"><span class="lnr lnr-cart"></span><span class="item_count">2</span></a>
                                       <!--mini cart-->
@@ -169,6 +170,9 @@
                                       </div> -->
                                       <!--mini cart end-->
                                   </div>
+                                  <div class="header_account_list header_wishlist">
+                                    <a routerLink="/myaccount"><span class="lnr lnr-user"></span></a>
+                                </div>
                               </div>
                           </div>
                       </div>
@@ -312,7 +316,7 @@
                           <div class="main_menu menu_position">
                               <nav>
                                   <ul>
-                                      <li><a class="active" href="/">home</a>
+                                      <li><a class="active" routerLink="/">home</a>
                                           <!-- <ul class="sub_menu">
                                               <li><a href="index.html">Home shop 1</a></li>
                                               <li><a href="index-2.html">Home shop 2</a></li>
@@ -353,13 +357,13 @@
                                               </ul>
                                           </div>
                                       </li> -->
-                                      <li><a routerLink="/">My Account</a>
+                                      <li><a routerLink="/">Fresh Fruits</a>
                                       </li>
-                                      <li><a routerLink="/cart">Cart</a>
+                                      <li><a routerLink="/">Vegetables</a>
                                       </li>
-                                      <li><a routerLink="/checkout">Checkout</a>
+                                      <li><a routerLink="/">Grocery</a>
                                       </li>
-                                      <li><a href="/"> Contact Us</a></li>
+                                      <li><a href="/">Items</a></li>
                                   </ul>
                               </nav>
                           </div>
