--- a/src/app/homepage/slider/slider.component.html
+++ b/src/app/homepage/slider/slider.component.html
@@ -81,7 +81,7 @@
 
 
 
-  <div id="carousel-home">
+  <!-- <div id="carousel-home">
     <div class="owl-carousel owl-theme">
         <div class="owl-slide cover" style="background-image: url(/assets/img/about_2.svg);">
             <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.5)">
@@ -100,7 +100,6 @@
                 </div>
             </div>
         </div>
-        <!--/owl-slide-->
         <div class="owl-slide cover" style="background-image: url(assets/img/about_2.svg);">
             <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.5)">
                 <div class="container">
@@ -118,7 +117,6 @@
                 </div>
             </div>
         </div>
-        <!--/owl-slide-->
         <div class="owl-slide cover" style="background-image: url(assets/img/about_2.svg);">
             <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(255, 255, 255, 0.5)">
                 <div class="container">
@@ -135,8 +133,7 @@
                     </div>
                 </div>
             </div>
-            <!--/owl-slide-->
         </div>
     </div>
     <div id="icon_drag_mobile"></div>
-</div>
+</div> -->
