--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -4,8 +4,8 @@
               <a href="#0" class="img_container">
                 <img src="assets/img/vegetables-image.jpg" data-src="assets/img/homepage/vegetables-image.jpg" alt="" class="lazy">
                 <div class="short_info opacity-mask" data-opacity-mask="rgba(0, 0, 0, 0.5)">
-                  <h3>vegetables</h3>
-                  <div><span class="btn_1">Shop Now</span></div>
+                  <h3 translate="home.vegetables"></h3>
+                  <div><span class="btn_1" translate="home.shop_now"></span></div>
                 </div>
               </a>
             </li>
@@ -13,8 +13,8 @@
               <a href="#0" class="img_container">
                 <img src="assets/img/grocery-image.jpg" data-src="assets/img/homepage/grocery-image.jpg" alt="" class="lazy">
                 <div class="short_info opacity-mask" data-opacity-mask="rgba(0, 0, 0, 0.5)">
-                  <h3>Grocery</h3>
-                  <div><span class="btn_1">Shop Now</span></div>
+                  <h3 translate="home.grocery"></h3>
+                  <div><span class="btn_1" translate="home.shop_now"></span></div>
                 </div>
               </a>
             </li>
@@ -22,8 +22,8 @@
               <a href="#0" class="img_container">
                 <img src="assets/img/fruits-image.jpg" data-src="assets/img/homepage/fruits-image.jpg" alt="" class="lazy">
                 <div class="short_info opacity-mask" data-opacity-mask="rgba(0, 0, 0, 0.5)">
-                  <h3>Fresh Fruits</h3>
-                  <div><span class="btn_1">Shop Now</span></div>
+                  <h3 translate="home.fruits"></h3>
+                  <div><span class="btn_1" translate="home.shop_now"></span></div>
                 </div>
               </a>
             </li>
@@ -32,9 +32,9 @@
           
           <div class="container margin_60_35">
             <div class="main_title">
-              <h2>Top Selling</h2>
-              <span>Products</span>
-              <p>Top Selling Products</p>
+              <h2 translate="home.top_selling"></h2>
+              <span translate="home.products"></span>
+              <p translate="home.top_selling_products"></p>
             </div>
             <div class="row small-gutters">
               <!-- <div class="col-6 col-md-4 col-xl-3">
@@ -96,9 +96,9 @@
                 
           <div class="container margin_60_35">
             <div class="main_title">
-              <h2>Top Trending</h2>
-              <span>Products</span>
-              <p>Top Trending Items</p>
+              <h2 translate="home.top_trending"></h2>
+              <span translate="home.products"></span>
+              <p translate="home.top_trending_items"></p>
             </div>
             <div class="row small-gutters">
        
@@ -137,9 +137,9 @@
           <!-- /container -->
           <div class="container margin_60_35">
             <div class="main_title">
-              <h2>Featured Products</h2>
-              <span>Products</span>
-              <p>Featured Items</p>
+              <h2 translate="home.feature_products"></h2>
+              <span translate="products"></span>
+              <p translate="home.feature_items"></p>
             </div>
             <div class="row small-gutters">
        
