--- a/src/app/homepage/slider/slider.component.html
+++ b/src/app/homepage/slider/slider.component.html
@@ -10,11 +10,11 @@
           <div class="row justify-content-center justify-content-md-end">
             <div class="col-lg-6 static">
             <div class="slide-text text-right white">
-              <h2 class="owl-slide-animated owl-slide-title">Attack Air<br>Max 720 Sage Low</h2>
-              <p class="owl-slide-animated owl-slide-subtitle">
+              <h2 class="owl-slide-animated owl-slide-title" translate="home.fresh_fruits"> </h2>
+              <!-- <p class="owl-slide-animated owl-slide-subtitle">
               Limited items available at this price
-              </p>
-              <div class="owl-slide-animated owl-slide-cta"><a class="btn_1" href="listing-grid-1-full.html" role="button">Shop Now</a></div>
+              </p> -->
+              <div class="owl-slide-animated owl-slide-cta"><a class="btn_1" href="listing-grid-1-full.html" role="button" translate="home.shop_now"></a></div>
             </div>
             </div>
           </div>
@@ -35,10 +35,10 @@
           <div class="row justify-content-center justify-content-md-start">
             <div class="col-lg-6 static">
             <div class="slide-text white">
-              <h2 class="owl-slide-animated owl-slide-title">Attack Air<br>VaporMax Flyknit 3</h2>
-              <p class="owl-slide-animated owl-slide-subtitle">
+              <h2 class="owl-slide-animated owl-slide-title" translate="home.vegetables"> </h2>
+              <!-- <p class="owl-slide-animated owl-slide-subtitle">
               Limited items available at this price
-              </p>
+              </p> -->
               <div class="owl-slide-animated owl-slide-cta"><a class="btn_1" href="listing-grid-1-full.html" role="button">Shop Now</a></div>
             </div>
             </div>
@@ -60,10 +60,10 @@
           <div class="row justify-content-center justify-content-md-start">
             <div class="col-lg-12 static">
             <div class="slide-text text-center white">
-              <h2 class="owl-slide-animated owl-slide-title">Attack Air<br>Monarch IV SE</h2>
-              <p class="owl-slide-animated owl-slide-subtitle">
+              <h2 class="owl-slide-animated owl-slide-title" translate="home.grocery"></h2>
+              <!-- <p class="owl-slide-animated owl-slide-subtitle">
               Lightweight cushioning and durable support with a Phylon midsole
-              </p>
+              </p> -->
               <div class="owl-slide-animated owl-slide-cta"><a class="btn_1" href="listing-grid-1-full.html" role="button">Shop Now</a></div>
             </div>
             </div>
