--- a/src/app/topheader/topheader.component.html
+++ b/src/app/topheader/topheader.component.html
@@ -7,13 +7,13 @@
                       <div class="col-lg-6 col-md-6">
                           <div class="language_currency">
                               <ul>
-                                  <li class="language"><a href="#"> Language <i class="icon-right ion-ios-arrow-down"></i></a>
+                                  <li class="language"><a translate="home.language"><i class="icon-right ion-ios-arrow-down"></i></a>
                                       <ul class="dropdown_language">
-                                          <li><a (click)="changeLangage('en')">English</a></li>
+                                          <li><a (click)="changeLangage('en')" href="#">English</a></li>
                                           <li><a (click)="changeLangage('ar')" href="#">العربية</a></li>
                                       </ul>
                                   </li>
-                                  <li class="currency"><a href="#"> Currency <i class="icon-right ion-ios-arrow-down"></i></a>
+                                  <li class="currency"><a translate="home.currency"><i class="icon-right ion-ios-arrow-down"></i></a>
                                       <ul class="dropdown_currency">
                                           <li><a href="#">€ Euro</a></li>
                                           <li><a href="#">£ Pound Sterling</a></li>
@@ -39,7 +39,7 @@
           </div>
           <div class="header_middle">
               <div class="container">
-                  <div class="row align-items-center">
+                  <div class="row align-items-center" [ngClass]="{'rtl': is_rtl}">
                       <div class="col-lg-2 col-md-3 col-sm-3 col-3">
                           <div class="logo">
                               <a href="/"><img src="assets/img/site-logo.png" alt=""></a>
@@ -180,7 +180,7 @@
           </div>
           <div class="header_bottom sticky-header">
               <div class="container">
-                  <div class="row align-items-center">
+                  <div class="row align-items-center" [ngClass]="{'rtl': is_rtl}">
                       <div class="col-lg-3">
                           <div class="categories_menu">
                               <div class="categories_title">
@@ -293,18 +293,17 @@
                                               </li>
                                           </ul>
                                       </li> -->
-                                      <li><a routerLink="/products"> Fresh Meat</a></li>
-                                      <li><a routerLink="/products"> Butter &amp; Eggs</a></li>
-                                      <li><a routerLink="/products">Milk</a></li>
-                                      <li><a routerLink="/products">Oil &amp; Vinegars</a></li>
-                                      <li><a routerLink="/products"> Bread</a></li>
-                                      <li><a routerLink="/products"> Jam &amp; Honey</a></li>
-                                      <li><a routerLink="/products"> Frozen Food</a></li>
+                                      <li><a routerLink="/products" translate="category.meat"></a></li>
+                                      <li><a routerLink="/products" translate="category.butter"></a></li>
+                                      <li><a routerLink="/products" translate="category.milk"></a></li>
+                                      <li><a routerLink="/products" translate="category.oil"></a></li>
+                                      <li><a routerLink="/products" translate="category.bread"></a></li>
+                                      <li><a routerLink="/products" translate="category.jam"></a></li>
+                                      <li><a routerLink="/products" translate="category.frozen_food"></a></li>
                                       <!-- <li id="cat_toggle" class="has-sub"><a href="#">  More Items</a>
                                           <ul class="categorie_sub">
                                               <li><a href="#">Hide Categories</a></li>
                                           </ul>
-
                                       </li> -->
                                   </ul>
                               </div>
