--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -60,6 +60,9 @@ Author URI: http://themeforest.net/user/Ansonika/
   -moz-osx-font-smoothing: grayscale;
 }
 
+.rtl{
+  direction: rtl;
+}
 .header-icon_like_custom:before {
   content: '\0041';
 }
