--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -29,7 +29,7 @@
                         <p><small>SKU: MTKRY-001</small><br>Lorem ipsum dolor sit amet, his no adipisci pericula conclusionemque. Qui labore salutandi ex, vivendum argumentum mediocritatem vis eu, viris tritani per id. At iudicabit maluisset vis, dicant diceret pri cu. Cum at rebum vulputate forensibus, eruditi principes ad vel, pro denique recusabo at. Ubique nominavi delicata sit cu, quo no reque insolens suscipiantur.</p>
                     </div>
                     <div class="prod_options version_2">
-                        <div class="row">
+                        <!-- <div class="row">
                             <label class="col-xl-7 col-lg-5  col-md-6 col-6 pt-0"><strong>Color</strong></label>
                             <div class="col-xl-5 col-lg-5 col-md-6 col-6 colors">
                                 <ul>
@@ -39,8 +39,8 @@
                                     <li><a href="#0" class="color color_4"></a></li>
                                 </ul>
                             </div>
-                        </div>
-                        <div class="row">
+                        </div> -->
+                        <!-- <div class="row">
                             <label class="col-xl-7 col-lg-5 col-md-6 col-6"><strong>Size</strong> - Size Guide <a href="#0" data-toggle="modal" data-target="#size-modal"><i class="ti-help-alt"></i></a></label>
                             <div class="col-xl-5 col-lg-5 col-md-6 col-6">
                                 <div class="custom-select-form">
@@ -52,7 +52,7 @@
                                     </select>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="row">
                             <label class="col-xl-7 col-lg-5  col-md-6 col-6"><strong>Quantity</strong></label>
                             <div class="col-xl-5 col-lg-5 col-md-6 col-6">
@@ -111,8 +111,6 @@
                                 <div class="col-lg-6">
                                     <h3>Details</h3>
                                     <p>Lorem ipsum dolor sit amet, in eleifend <strong>inimicus elaboraret</strong> his, harum efficiendi mel ne. Sale percipit vituperata ex mel, sea ne essent aeterno sanctus, nam ea laoreet civibus electram. Ea vis eius explicari. Quot iuvaret ad has.</p>
-                                    <p>Vis ei ipsum conclusionemque. Te enim suscipit recusabo mea, ne vis mazim aliquando, everti insolens at sit. Cu vel modo unum quaestio, in vide dicta has. Ut his laudem explicari adversarium, nisl <strong>laboramus hendrerit</strong> te his, alia lobortis vis ea.</p>
-                                    <p>Perfecto eleifend sea no, cu audire voluptatibus eam. An alii praesent sit, nobis numquam principes ea eos, cu autem constituto suscipiantur eam. Ex graeci elaboraret pro. Mei te omnis tantas, nobis viderer vivendo ex has.</p>
                                 </div>
                                 <div class="col-lg-5">
                                     <h3>Specifications</h3>
@@ -215,7 +213,7 @@
     </div>
     <!-- /tab_content_wrapper -->
 
-    <div class="bg_white">
+    <!-- <div class="bg_white">
         <div class="container margin_60_35">
             <div class="main_title">
                 <h2>Related</h2>
@@ -244,9 +242,7 @@
                             <li><a href="#0" class="tooltip-1" data-toggle="tooltip" data-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
                         </ul>
                     </div>
-                    <!-- /grid_item -->
                 </div>
-                <!-- /item -->
                 <div class="item">
                     <div class="grid_item">
                         <span class="ribbon new">New</span>
@@ -268,9 +264,7 @@
                             <li><a href="#0" class="tooltip-1" data-toggle="tooltip" data-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
                         </ul>
                     </div>
-                    <!-- /grid_item -->
                 </div>
-                <!-- /item -->
                 <div class="item">
                     <div class="grid_item">
                         <span class="ribbon hot">Hot</span>
@@ -292,9 +286,7 @@
                             <li><a href="#0" class="tooltip-1" data-toggle="tooltip" data-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
                         </ul>
                     </div>
-                    <!-- /grid_item -->
                 </div>
-                <!-- /item -->
                 <div class="item">
                     <div class="grid_item">
                         <span class="ribbon off">-30%</span>
@@ -317,9 +309,7 @@
                             <li><a href="#0" class="tooltip-1" data-toggle="tooltip" data-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
                         </ul>
                     </div>
-                    <!-- /grid_item -->
                 </div>
-                <!-- /item -->
                 <div class="item">
                     <div class="grid_item">
                         <span class="ribbon off">-50%</span>
@@ -342,14 +332,10 @@
                             <li><a href="#0" class="tooltip-1" data-toggle="tooltip" data-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
                         </ul>
                     </div>
-                    <!-- /grid_item -->
                 </div>
-                <!-- /item -->
             </div>
-            <!-- /products_carousel -->
         </div>
-        <!-- /container -->
-    </div>
+    </div> -->
     <!-- /bg_white -->
 
 </main>
