--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,7 +1,7 @@
 
     <div class="col-xl-12 col-lg-12 col-md-12">
         <div class="box_account">
-            <h3 class="new_client">New Client</h3> <small class="float-right pt-2">* Required Fields</small>
+            <h3 class="new_client" translate="auth.register"></h3> <small class="float-right pt-2" translate="auth.required"></small>
             <div class="form_container">
                 <div class="form-group">
                     <input type="email" class="form-control" name="email" id="email_2" placeholder="Email*">
@@ -10,7 +10,7 @@
                     <input type="password" class="form-control" name="password_in_2" id="password_in_2" value="" placeholder="Password*">
                 </div>
                 <hr>
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label class="container_radio" style="display: inline-block; margin-right: 15px;">Private
                         <input type="radio" name="client_type" checked value="private">
                         <span class="checkmark"></span>
@@ -19,7 +19,7 @@
                         <input type="radio" name="client_type" value="company">
                         <span class="checkmark"></span>
                     </label>
-                </div>
+                </div> -->
                 <div class="private box">
                     <div class="row no-gutters">
                         <div class="col-6 pr-1">
@@ -27,11 +27,16 @@
                                 <input type="text" class="form-control" placeholder="Name*">
                             </div>
                         </div>
-                        <div class="col-6 pl-1">
+                        <div class="col-6 pr-1">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="City*">
+                            </div>
+                        </div>
+                        <!-- <div class="col-6 pl-1">
                             <div class="form-group">
                                 <input type="text" class="form-control" placeholder="Last Name*">
                             </div>
-                        </div>
+                        </div> -->
                         <div class="col-12">
                             <div class="form-group">
                                 <input type="text" class="form-control" placeholder="Full Address*">
@@ -39,18 +44,14 @@
                         </div>
                     </div>
                     <!-- /row -->
-                    <div class="row no-gutters">
-                        <div class="col-6 pr-1">
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="City*">
-                            </div>
-                        </div>
+                    <!-- <div class="row no-gutters">
+                     
                         <div class="col-6 pl-1">
                             <div class="form-group">
                                 <input type="text" class="form-control" placeholder="Postal Code*">
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- /row -->
                     
                     <div class="row no-gutters">
@@ -101,6 +102,11 @@
                                 <input type="text" class="form-control" placeholder="Postal Code*">
                             </div>
                         </div>
+                        <div class="col-6 pl-1">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Telephone *">
+                            </div>
+                        </div>
                     </div>
                     <!-- /row -->
                     <div class="row no-gutters">
@@ -116,11 +122,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 pl-1">
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Telephone *">
-                            </div>
-                        </div>
+                       
                     </div>
                     <!-- /row -->
                 </div>
@@ -133,7 +135,7 @@
                     </label>
                 </div>
                 <div class="text-center"><input [routerLink]="[ '/' ]" type="submit" value="Register" class="btn_1 full-width"></div>
-                <div class="text-center"><a [routerLink]="[ '/auth' ]" class="btn btn-primary btn-block">Login</a></div>
+                <div class="text-center"><a [routerLink]="[ '/auth' ]" class="btn btn-primary btn-block" translate="auth.login">Login</a></div>
             </div>
             <!-- /form_container -->
         </div>
