--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -8,7 +8,7 @@
                 <li>Page active</li>
             </ul>
         </div> -->
-        <h1>Recently Purchased</h1>
+        <h1 translate="wishlist.recent"></h1>
     </div>
 
   
@@ -33,7 +33,6 @@
               </div>
               <ul>
                 <li><a href="#0" class="tooltip-1" data-toggle="tooltip" data-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-                <li><a href="#0" class="tooltip-1" data-toggle="tooltip" data-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
                 <li><a href="#0" class="tooltip-1" data-toggle="tooltip" data-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
               </ul>
             </div>
